--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Halo gusy aku kangen reyhan
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Perpustakaan Digital</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <header>
+    <h1>📚 Perpustakaan Digital</h1>
+    <p>Tempat membaca tanpa batas</p>
+  </header>
+
+  <section class="search">
+    <input type="text" id="searchInput" placeholder="Cari judul buku..." onkeyup="searchBook()">
+  </section>
+
+  <section class="book-list" id="bookList">
+    <!-- Buku akan muncul di sini -->
+  </section>
+
+  <footer>
+    <p>© 2026 Perpustakaan Digital</p>
+  </footer>
+
+  <script src="js/script.js"></script>
+</body>
+</html>
