--- a/index.html
+++ b/index.html
@@ -3,27 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Perpustakaan Digital</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <header>
-    <h1>📚 Perpustakaan Digital</h1>
-    <p>Tempat membaca tanpa batas</p>
-  </header>
-
-  <section class="search">
-    <input type="text" id="searchInput" placeholder="Cari judul buku..." onkeyup="searchBook()">
-  </section>
-
-  <section class="book-list" id="bookList">
-    <!-- Buku akan muncul di sini -->
-  </section>
-
-  <footer>
-    <p>© 2026 Perpustakaan Digital</p>
-  </footer>
-
-  <script src="js/script.js"></script>
+  <h1>Selamat Datang di Perpustakaan</h1>
+  <p>Website perpustakaan berbasis digital.</p>
 </body>
 </html>
