--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Perpustakaan Digital</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <h1>Selamat Datang di Perpustakaan</h1>
   <p>Website perpustakaan berbasis digital.</p>
+
 </body>
 </html>
