--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-  <h1>Selamat Datang di Perpustakaan</h1>
-  <p>Website perpustakaan berbasis digital.</p>
+  <h1>Our Website is Coming Soon</h1>
+  <p>Website perpustakaan.</p>
 
 </body>
 </html>
