--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <h1>Our Website is Coming Soon</h1>
-  <p>Website perpustakaan.</p>
+  <p>Website Perpustakaan Haya Farras.</p>
 
 </body>
 </html>
