--- a/index.html
+++ b/index.html
@@ -14,3 +14,27 @@
 
 </body>
 </html>
+
+/* Font dasar untuk seluruh halaman */
+body {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  margin: 0;
+  padding: 30px;
+  background-color: #f5f5f5;
+}
+
+/* Judul utama */
+h1 {
+  font-weight: 700;     /* Bold */
+  font-size: 36px;      /* Agak besar */
+  margin-bottom: 10px;
+  color: #333;
+}
+
+/* Paragraf */
+p {
+  font-size: 16px;      /* Ukuran normal */
+  color: #555;
+}
