--- a/index.html
+++ b/index.html
@@ -4,37 +4,18 @@
   <meta charset="UTF-8">
   <title>Perpustakaan Digital</title>
 
+  <!-- Google Font Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Our Website is Coming Soon</h1>
-  <p>Website Perpustakaan Haya Farras.</p>
+  <div class="container">
+    <h1>OUR WEBSITE IS COMING SOON</h1>
+    <p>Website Perpustakaan Haya Farras</p>
+  </div>
 
 </body>
 </html>
-
-/* Font dasar untuk seluruh halaman */
-body {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  margin: 0;
-  padding: 30px;
-  background-color: #f5f5f5;
-}
-
-/* Judul utama */
-h1 {
-  font-weight: 700;     /* Bold */
-  font-size: 36px;      /* Agak besar */
-  margin-bottom: 10px;
-  color: #333;
-}
-
-/* Paragraf */
-p {
-  font-size: 16px;      /* Ukuran normal */
-  color: #555;
-}
