--- a/index.html
+++ b/index.html
@@ -2,19 +2,67 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Perpustakaan Digital</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Our Website is COMING SOON</title>
 
   <!-- Google Font Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #eaf2ff; /* soft blue */
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      color: #2c2c2c;
+    }
+
+    .container {
+      animation: fadeIn 2s ease-in-out;
+      max-width: 800px;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 56px;
+      font-weight: 700; /* Poppins Bold */
+      margin: 0;
+      letter-spacing: 3px;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: 400; /* Poppins Regular */
+      margin-top: 25px;
+      color: #555;
+      line-height: 1.6;
+      text-align: left;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
 <body>
 
   <div class="container">
-    <h1>OUR WEBSITE IS COMING SOON</h1>
-    <p>Website Perpustakaan Haya Farras</p>
+    <h1>COMING SOON</h1>
+    <p>
+      Website Perpustakaan Haya Farras sedang dalam tahap pengembangan.<br>
+      Nantikan hadirnya ruang literasi digital yang inspiratif, informatif, dan penuh ilmu pengetahuan.
+    </p>
   </div>
 
 </body>
