--- a/index.html
+++ b/index.html
@@ -20,41 +20,33 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #f6c1cc, #c7e2c4); /* pink x matcha */
+      background: linear-gradient(180deg, #dbeafe, #ffffff); /* soft blue to white */
       font-family: 'Poppins', sans-serif;
       overflow: hidden;
       color: #2c2c2c;
     }
 
-    /* Glitter stars */
-    body::before,
-    body::after {
+    /* ⭐ STAR BACKGROUND */
+    body::before {
       content: "";
       position: absolute;
-      width: 200%;
-      height: 200%;
+      width: 100%;
+      height: 100%;
       background-image:
-        radial-gradient(2px 2px at 20% 30%, white, transparent),
-        radial-gradient(2px 2px at 70% 40%, white, transparent),
-        radial-gradient(1.5px 1.5px at 40% 80%, white, transparent),
-        radial-gradient(2px 2px at 80% 60%, white, transparent),
-        radial-gradient(1.5px 1.5px at 10% 70%, white, transparent);
-      animation: glitterMove 20s linear infinite;
-      opacity: 0.7;
+        radial-gradient(1px 1px at 10% 20%, #ffffff, transparent),
+        radial-gradient(1.5px 1.5px at 30% 70%, #ffffff, transparent),
+        radial-gradient(1px 1px at 50% 40%, #ffffff, transparent),
+        radial-gradient(1.5px 1.5px at 70% 30%, #ffffff, transparent),
+        radial-gradient(1px 1px at 85% 80%, #ffffff, transparent),
+        radial-gradient(1.2px 1.2px at 20% 85%, #ffffff, transparent),
+        radial-gradient(1px 1px at 90% 10%, #ffffff, transparent);
+      animation: twinkle 4s infinite alternate;
+      opacity: 0.8;
     }
 
-    body::after {
-      animation-duration: 35s;
-      opacity: 0.4;
-    }
-
-    @keyframes glitterMove {
-      from {
-        transform: translate(0, 0);
-      }
-      to {
-        transform: translate(-50%, -50%);
-      }
+    @keyframes twinkle {
+      from { opacity: 0.4; }
+      to { opacity: 1; }
     }
 
     .container {
@@ -72,38 +64,35 @@
       letter-spacing: 4px;
       color: #ffffff;
       text-shadow:
-        0 0 5px #fff,
-        0 0 10px #ffd1dc,
-        0 0 20px #ffd1dc;
-      animation: glowText 2.5s ease-in-out infinite alternate,
-                 floatText 3s ease-in-out infinite;
+        0 0 6px #ffffff,
+        0 0 12px #93c5fd,
+        0 0 24px #93c5fd;
+      animation:
+        glowText 2.5s ease-in-out infinite alternate,
+        floatText 3s ease-in-out infinite;
     }
 
     p {
-      margin-top: 30px;
+      margin-top: 28px;
       font-size: 18px;
       font-weight: 400;
-      color: #444;
+      color: #4b5563;
       text-align: left;
       line-height: 1.7;
-      background: rgba(255, 255, 255, 0.6);
-      padding: 15px 20px;
-      border-radius: 12px;
-      backdrop-filter: blur(6px);
     }
 
     @keyframes glowText {
       from {
         text-shadow:
-          0 0 5px #fff,
-          0 0 10px #ffd1dc,
-          0 0 20px #ffd1dc;
+          0 0 6px #ffffff,
+          0 0 12px #93c5fd,
+          0 0 24px #93c5fd;
       }
       to {
         text-shadow:
-          0 0 10px #fff,
-          0 0 20px #ffc0cb,
-          0 0 35px #ffc0cb;
+          0 0 10px #ffffff,
+          0 0 20px #60a5fa,
+          0 0 40px #60a5fa;
       }
     }
 
