--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
   <div class="container">
     <h1>COMING SOON</h1>
     <p>
-      Website Perpustakaan Haya Farras sedang dalam tahap pengembangan<br>
+      Halo! Terima kasih telah berkunjung >.<
+      Saat ini website Perpustakaan Haya Farras masih dalam proses tumbuh dan berkembang🌱
+      Mohon dinantikan yaa! <br>
     </p>
   </div>
 
