--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
   <div class="container">
     <h1>COMING SOON</h1>
     <p>
-      Halo! Terima kasih telah berkunjung >.<
-      Saat ini website Perpustakaan Haya Farras masih dalam proses tumbuh dan berkembang🌱
-      Mohon dinantikan yaa! <br>
+      Halo! Terima kasih telah berkunjung >.< <br>
+      Saat ini website Perpustakaan Haya Farras masih dalam proses tumbuh dan berkembang🌱 <br>
+      Mohon nantikan yaa! <br>
     </p>
   </div>
 
