--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     /* ⭐ STAR BACKGROUND */
     body::before {
-      content: "";
+      content: "⭐";
       position: absolute;
       width: 100%;
       height: 100%;
@@ -121,6 +121,7 @@
     <p>
       Halo! Terima kasih telah berkunjung >.< <br>
       Saat ini website Perpustakaan Haya Farras masih dalam proses tumbuh dan berkembang🌱 <br>
+        <br>
       Mohon nantikan yaa! <br>
     </p>
   </div>
