--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     /* ⭐ STAR BACKGROUND */
     body::before {
-      content: "⭐";
+      content: "";
       position: absolute;
       width: 100%;
       height: 100%;
