--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <body>
 
   <div class="container">
-    <h1>COMING SOON</h1>
+    <h1>⭐COMING SOON⭐</h1>
     <p>
       Halo! Terima kasih telah berkunjung >.< <br>
       Saat ini website Perpustakaan Haya Farras masih dalam proses tumbuh dan berkembang🌱 <br>
