--- a/index.html
+++ b/index.html
@@ -33,23 +33,35 @@
       justify-content: center;
       align-items: center;
       z-index: 9999;
-      animation: fadeOut 1.5s ease forwards;
-      animation-delay: 2.5s;
+      opacity: 0;
+      animation: fadeIn 1.5s ease forwards, fadeOut 1.5s ease forwards;
+      animation-delay: 0s, 3s;
     }
 
     .intro h1 {
       font-size: 48px;
       color: #1e3a8a;
+      animation: slideUp 1.5s ease;
     }
 
     .intro h2 {
       margin-top: 10px;
       font-size: 20px;
       color: #2563eb;
+      animation: slideUp 2s ease;
+    }
+
+    @keyframes fadeIn {
+      to { opacity: 1; }
     }
 
     @keyframes fadeOut {
       to { opacity: 0; visibility: hidden; }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(20px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
 
     header {
@@ -92,7 +104,7 @@
     }
 
     section {
-      margin-bottom: 60px;
+      margin-bottom: 20px;
       text-align: center;
     }
 
@@ -108,7 +120,16 @@
       color: #4b5563;
     }
 
-    /* ABOUT ME */
+    /* PEMISAH */
+    .section-divider {
+      width: 60%;
+      height: 2px;
+      margin: 50px auto;
+      background: linear-gradient(to right, transparent, #93c5fd, transparent);
+      border-radius: 2px;
+    }
+
+    /* ABOUT */
     .about-container {
       display: flex;
       flex-direction: column;
@@ -124,7 +145,6 @@
       box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     }
 
-    /* MORE ABOUT ME */
     .about-links {
       margin-top: 15px;
       display: flex;
@@ -174,35 +194,39 @@
 
 <body>
 
+  <!-- INTRO -->
   <div class="intro">
     <h1>Selamat Datang ✨</h1>
     <h2>Perpustakaan Haya Farras</h2>
   </div>
 
+  <!-- HEADER -->
   <header>
     <h1>Perpustakaan Haya Farras</h1>
   </header>
 
+  <!-- NAV -->
   <nav>
     <a href="index.html">Home</a>
     <a href="koleksi.html">Koleksi</a>
     <a href="kontak.html">Kontak</a>
   </nav>
 
+  <!-- MAIN -->
   <main>
 
-    <!-- TUJUAN WEBSITE -->
     <section>
       <h2>Tentang Website Ini</h2>
       <p>
         Website ini dibuat sebagai proyek pembuatan website perpustakaan pribadi.
-        Tujuannya adalah untuk menyediakan ruang digital yang dapat menampilkan
-        koleksi buku, informasi literasi, serta menjadi media pengembangan
-        kemampuan dalam bidang pengelolaan informasi dan teknologi web.
+        Tujuannya adalah untuk menyediakan ruang digital yang menampilkan koleksi buku,
+        informasi literasi, serta sebagai sarana pengembangan kemampuan dalam
+        pengelolaan informasi dan teknologi web.
       </p>
     </section>
 
-    <!-- TENTANG AKU -->
+    <div class="section-divider"></div>
+
     <section>
       <h2>Tentang Aku</h2>
       <div class="about-container">
@@ -210,8 +234,7 @@
         <p>
           Halo, aku Haya Farras. Website ini merupakan bagian dari tugas akademik
           sekaligus wadah untuk menampilkan minat dan ketertarikanku dalam bidang
-          literasi dan pengelolaan perpustakaan. Aku percaya bahwa perpustakaan
-          bukan hanya tempat menyimpan buku, tetapi juga ruang bertumbuh dan belajar.
+          literasi dan pengelolaan perpustakaan.
         </p>
 
         <div class="about-links">
@@ -221,13 +244,14 @@
       </div>
     </section>
 
-    <!-- VIDEO -->
+    <div class="section-divider"></div>
+
     <section>
-      <h2>Video Perkenalan</h2>
+      <h2>Video Dokumentasi</h2>
       <div class="video-container">
         <iframe 
-          src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-          title="Video Perkenalan"
+          src="https://www.youtube.com/embed/4w13jP-cshM"
+          title="Video Dokumentasi Pengabdian kepada Masyarakat"
           frameborder="0"
           allowfullscreen>
         </iframe>
@@ -239,15 +263,6 @@
   <footer>
     © 2026 Perpustakaan Haya Farras
   </footer>
-
-  <script>
-    window.addEventListener("load", () => {
-      setTimeout(() => {
-        const intro = document.querySelector(".intro");
-        if (intro) intro.style.display = "none";
-      }, 4000);
-    });
-  </script>
 
 </body>
 </html>
