--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <div class="section-divider"></div>
 
     <section>
-      <h2>Video Dokumentasi</h2>
+      <h2>Video Dokumentasi Pengabdian kepada Masyarakat</h2>
       <div class="video-container">
         <iframe 
           src="https://www.youtube.com/embed/4w13jP-cshM"
