--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <section>
       <h2>Tentang Aku</h2>
       <div class="about-container">
-        <img src="fotoku.jpg" alt="Foto Haya Farras">
+        <img src="fotoku.jpg" alt="Foto Haya Farras" class="profile-img">
         <p>
           Halo, aku Haya Farras. Website ini merupakan bagian dari tugas akademik
           sekaligus wadah untuk menampilkan minat dan ketertarikanku dalam bidang
