--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
     }
 
     body {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(180deg, #dbeafe, #ffffff);
       color: #2c2c2c;
@@ -38,95 +35,92 @@
       animation-delay: 0s, 3s;
     }
 
-    .intro h1 {
-      font-size: 48px;
-      color: #1e3a8a;
-      animation: slideUp 1.5s ease;
-    }
+    @keyframes fadeIn { to { opacity: 1; } }
+    @keyframes fadeOut { to { opacity: 0; visibility: hidden; } }
 
-    .intro h2 {
-      margin-top: 10px;
-      font-size: 20px;
-      color: #2563eb;
-      animation: slideUp 2s ease;
-    }
-
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-
-    @keyframes fadeOut {
-      to { opacity: 0; visibility: hidden; }
-    }
-
-    @keyframes slideUp {
-      from { transform: translateY(20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
+    /* HEADER + NAV */
     header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       background-color: #bfdbfe;
-      padding: 24px 32px;
+      padding: 15px 40px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
-    header h1 {
-      font-size: 26px;
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .logo img {
+      width: 40px;
+      height: 40px;
+    }
+
+    .logo h1 {
+      font-size: 20px;
       color: #1e3a8a;
     }
 
     nav {
-      position: fixed;
-      top: 20px;
-      right: 32px;
       display: flex;
       gap: 20px;
-      background: rgba(255,255,255,0.85);
-      padding: 10px 18px;
-      border-radius: 20px;
-      backdrop-filter: blur(6px);
+      align-items: center;
     }
 
     nav a {
       text-decoration: none;
       font-weight: 600;
-      color: #2563eb;
+      color: #1e3a8a;
+      transition: 0.3s;
     }
 
     nav a:hover {
-      text-decoration: underline;
+      color: #2563eb;
+    }
+
+    .auth-buttons a {
+      background-color: #2563eb;
+      color: white;
+      padding: 6px 14px;
+      border-radius: 20px;
+      font-size: 14px;
+    }
+
+    .auth-buttons a:hover {
+      background-color: #1e3a8a;
     }
 
     main {
-      flex: 1;
       max-width: 900px;
-      margin: 140px auto 40px;
+      margin: 80px auto 40px;
       padding: 20px;
-    }
-
-    section {
-      margin-bottom: 20px;
       text-align: center;
     }
 
-    section h2 {
-      font-size: 28px;
+    section {
+      margin-bottom: 40px;
+    }
+
+    h2 {
       margin-bottom: 20px;
       color: #1e3a8a;
     }
 
-    section p {
-      font-size: 17px;
+    p {
       line-height: 1.7;
       color: #4b5563;
     }
 
-    /* PEMISAH */
     .section-divider {
       width: 60%;
       height: 2px;
-      margin: 50px auto;
+      margin: 40px auto;
       background: linear-gradient(to right, transparent, #93c5fd, transparent);
-      border-radius: 2px;
     }
 
     /* ABOUT */
@@ -137,20 +131,12 @@
       gap: 20px;
     }
 
-    .about-container img {
+    .profile-img {
       width: 180px;
       height: 180px;
       border-radius: 50%;
       object-fit: cover;
       box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    }
-
-    .about-links {
-      margin-top: 15px;
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      flex-wrap: wrap;
     }
 
     .about-links a {
@@ -159,8 +145,8 @@
       color: #1e3a8a;
       padding: 8px 18px;
       border-radius: 20px;
-      font-weight: 500;
-      transition: 0.3s;
+      margin: 5px;
+      display: inline-block;
     }
 
     .about-links a:hover {
@@ -169,17 +155,41 @@
     }
 
     /* VIDEO */
-    .video-container {
-      margin-top: 20px;
-      display: flex;
-      justify-content: center;
-    }
-
     iframe {
       width: 100%;
       max-width: 560px;
       height: 315px;
       border-radius: 12px;
+    }
+
+    /* CONTACT FORM */
+    .contact-form {
+      max-width: 500px;
+      margin: auto;
+      text-align: left;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    .contact-form button {
+      background-color: #2563eb;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+    }
+
+    .contact-form button:hover {
+      background-color: #1e3a8a;
     }
 
     footer {
@@ -202,26 +212,29 @@
 
   <!-- HEADER -->
   <header>
-    <h1>Perpustakaan Haya Farras</h1>
+    <div class="logo">
+      <img src="logo.png" alt="Logo">
+      <h1>Perpustakaan Haya Farras</h1>
+    </div>
+
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Koleksi</a>
+      <a href="#contact">Contact</a>
+      <div class="auth-buttons">
+        <a href="#">Login</a>
+        <a href="#">Register</a>
+      </div>
+    </nav>
   </header>
 
-  <!-- NAV -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="koleksi.html">Koleksi</a>
-    <a href="kontak.html">Kontak</a>
-  </nav>
-
-  <!-- MAIN -->
   <main>
 
     <section>
       <h2>Tentang Website Ini</h2>
       <p>
-        Website ini dibuat sebagai proyek pembuatan website perpustakaan pribadi.
-        Tujuannya adalah untuk menyediakan ruang digital yang menampilkan koleksi buku,
-        informasi literasi, serta sebagai sarana pengembangan kemampuan dalam
-        pengelolaan informasi dan teknologi web.
+        Website ini dibuat sebagai proyek pembuatan website perpustakaan pribadi
+        yang bertujuan menampilkan koleksi buku dan informasi literasi.
       </p>
     </section>
 
@@ -232,14 +245,12 @@
       <div class="about-container">
         <img src="foto.jpg" alt="Foto Haya Farras" class="profile-img">
         <p>
-          Halo, aku Haya Farras. Website ini merupakan bagian dari tugas akademik
-          sekaligus wadah untuk menampilkan minat dan ketertarikanku dalam bidang
-          literasi dan pengelolaan perpustakaan.
+          Halo, aku Haya Farras. Website ini adalah bagian dari tugas akademik
+          sekaligus wadah untuk menampilkan minatku dalam bidang literasi.
         </p>
-
         <div class="about-links">
-          <a href="https://instagram.com/thirahay" target="_blank">Instagram</a>
-          <a href="https://drive.google.com/drive/folders/1xfyE7vIU5a05aADljtF3Ku4mBBQ_ZjrF?usp=drive_link" target="_blank">Curriculum Vitae</a>
+          <a href="#">Instagram</a>
+          <a href="#">Curriculum Vitae</a>
         </div>
       </div>
     </section>
@@ -247,14 +258,23 @@
     <div class="section-divider"></div>
 
     <section>
-      <h2>Video Dokumentasi Pengabdian kepada Masyarakat</h2>
-      <div class="video-container">
-        <iframe 
-          src="https://www.youtube.com/embed/4w13jP-cshM"
-          title="Video Dokumentasi Pengabdian kepada Masyarakat"
-          frameborder="0"
-          allowfullscreen>
-        </iframe>
+      <h2>Video Dokumentasi</h2>
+      <iframe src="https://www.youtube.com/embed/4w13jP-cshM"
+        allowfullscreen></iframe>
+    </section>
+
+    <div class="section-divider"></div>
+
+    <!-- CONTACT US -->
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <div class="contact-form">
+        <form>
+          <input type="text" placeholder="Nama Anda" required>
+          <input type="email" placeholder="Email Anda" required>
+          <textarea rows="5" placeholder="Tulis pesan atau feedback Anda..." required></textarea>
+          <button type="submit">Kirim Pesan</button>
+        </form>
       </div>
     </section>
 
