--- a/index.html
+++ b/index.html
@@ -4,121 +4,137 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Perpustakaan Haya Farras</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;}
-body{
-font-family:'Poppins',sans-serif;
-background:linear-gradient(180deg,#dbeafe,#ffffff);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(180deg, #dbeafe, #ffffff);
+  color: #2c2c2c;
 }
 
 /* HEADER */
-header{
-display:flex;
-justify-content:space-between;
-align-items:center;
-padding:15px 40px;
-background:#bfdbfe;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #bfdbfe;
+  padding: 15px 40px;
 }
 
-.logo{
-display:flex;
-align-items:center;
-gap:10px;
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.logo img{
-width:40px;
+.logo img {
+  width: 40px;
+  height: 40px;
 }
 
-nav{
-display:flex;
-gap:20px;
+nav {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
-nav a{
-text-decoration:none;
-font-weight:600;
-color:#1e3a8a;
-cursor:pointer;
+nav a {
+  text-decoration: none;
+  font-weight: 600;
+  color: #1e3a8a;
+  cursor: pointer;
 }
 
-nav a:hover{
-color:#2563eb;
+nav a:hover {
+  color: #2563eb;
 }
 
-main{
-max-width:900px;
-margin:50px auto;
-padding:20px;
-text-align:center;
+/* MAIN */
+main {
+  max-width: 900px;
+  margin: 80px auto 40px;
+  padding: 20px;
+  text-align: center;
+}
+
+.section-divider {
+  width: 60%;
+  height: 2px;
+  margin: 40px auto;
+  background: linear-gradient(to right, transparent, #93c5fd, transparent);
+}
+
+.profile-img {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
 }
 
 /* SECTION CONTROL */
-.page{
-display:none;
+.section {
+  display: none;
 }
 
-.page.active{
-display:block;
+.section.active {
+  display: block;
 }
 
 /* FORM STYLE */
-.form-box{
-background:white;
-padding:30px;
-border-radius:12px;
-box-shadow:0 5px 20px rgba(0,0,0,0.1);
-max-width:400px;
-margin:auto;
+.form-box {
+  background: white;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+  max-width: 400px;
+  margin: 40px auto;
+  text-align: center;
 }
 
-input, textarea{
-width:100%;
-padding:10px;
-margin:10px 0;
-border-radius:8px;
-border:1px solid #ccc;
+.form-box input,
+.form-box textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 8px;
+  border: 1px solid #ccc;
 }
 
-button{
-padding:10px 20px;
-background:#2563eb;
-color:white;
-border:none;
-border-radius:20px;
-cursor:pointer;
+.form-box button {
+  background: #2563eb;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
-button:hover{
-background:#1e3a8a;
+.form-box button:hover {
+  background: #1e3a8a;
 }
 
-.link{
-margin-top:10px;
-font-size:14px;
+.switch span {
+  color: #2563eb;
+  cursor: pointer;
+  font-weight: 600;
 }
 
-.section-divider{
-width:60%;
-height:2px;
-margin:40px auto;
-background:linear-gradient(to right,transparent,#93c5fd,transparent);
-}
-
-.profile-img{
-width:180px;
-height:180px;
-border-radius:50%;
-object-fit:cover;
-}
-
-footer{
-text-align:center;
-padding:20px;
-background:#93c5fd;
-margin-top:50px;
+/* FOOTER */
+footer {
+  background-color: #93c5fd;
+  text-align: center;
+  padding: 20px;
+  font-size: 14px;
+  color: #1e3a8a;
 }
 </style>
 </head>
@@ -126,95 +142,108 @@ margin-top:50px;
 <body>
 
 <header>
-<div class="logo">
-<img src="logo.png">
-<h3>Perpustakaan Haya Farras</h3>
-</div>
+  <div class="logo">
+    <img src="logo.png" alt="Logo">
+    <h3>Perpustakaan Haya Farras</h3>
+  </div>
 
-<nav>
-<a onclick="showPage('beranda')">Beranda</a>
-<a onclick="showPage('koleksi')">Koleksi</a>
-<a onclick="showPage('kontak')">Kontak</a>
-<a onclick="showPage('login')">Login</a>
-<a onclick="showPage('register')">Register</a>
-</nav>
+  <nav>
+    <a onclick="showSection('home')">Beranda</a>
+    <a onclick="showSection('koleksi')">Koleksi</a>
+    <a onclick="showSection('kontak')">Kontak</a>
+    <a onclick="showSection('login')">Login</a>
+    <a onclick="showSection('register')">Register</a>
+  </nav>
 </header>
 
 <main>
 
-<!-- BERANDA -->
-<div id="beranda" class="page active">
-<h2>Tentang Website Ini</h2>
-<p>Website perpustakaan pribadi untuk menampilkan koleksi dan literasi.</p>
+<!-- ================= BERANDA ================= -->
+<div id="home" class="section active">
 
-<div class="section-divider"></div>
+  <h2>Tentang Website Ini</h2>
+  <p>
+    Website ini dibuat sebagai proyek pembuatan website perpustakaan pribadi.
+    Tujuannya adalah untuk menyediakan ruang digital yang menampilkan koleksi buku,
+    informasi literasi, serta sebagai sarana pengembangan kemampuan dalam
+    pengelolaan informasi dan teknologi web.
+  </p>
 
-<h2>Tentang Aku</h2>
-<img src="fotoku.jpg" class="profile-img">
-<p>Halo, aku Haya Farras ✨</p>
-</div>
+  <div class="section-divider"></div>
 
-<!-- KOLEKSI -->
-<div id="koleksi" class="page">
-<h2>Koleksi Buku</h2>
-<p>Daftar koleksi buku akan ditampilkan di sini.</p>
-</div>
+  <h2>Tentang Aku</h2>
+  <img src="foto.jpg" alt="Foto Haya Farras" class="profile-img">
+  <p>
+    Halo, aku Haya Farras. Website ini merupakan bagian dari tugas akademik
+    sekaligus wadah untuk menampilkan minat dan ketertarikanku dalam bidang
+    literasi dan pengelolaan perpustakaan.
+  </p>
 
-<!-- LOGIN -->
-<div id="login" class="page">
-<div class="form-box">
-<h2>Login</h2>
-<form>
-<input type="email" placeholder="Email" required>
-<input type="password" placeholder="Password" required>
-<button type="submit">Login</button>
-</form>
-<div class="link">
-Belum punya akun? 
-<a onclick="showPage('register')" style="color:#2563eb;cursor:pointer;">Register di sini</a>
-</div>
-</div>
 </div>
 
-<!-- REGISTER -->
-<div id="register" class="page">
-<div class="form-box">
-<h2>Register</h2>
-<form>
-<input type="text" placeholder="Nama Lengkap" required>
-<input type="email" placeholder="Email" required>
-<input type="password" placeholder="Password" required>
-<button type="submit">Daftar</button>
-</form>
-<div class="link">
-Sudah punya akun? 
-<a onclick="showPage('login')" style="color:#2563eb;cursor:pointer;">Login di sini</a>
-</div>
-</div>
+<!-- ================= KOLEKSI ================= -->
+<div id="koleksi" class="section">
+  <h2>Koleksi Buku</h2>
+  <p>Daftar koleksi buku akan ditampilkan di sini.</p>
 </div>
 
-<!-- KONTAK -->
-<div id="kontak" class="page">
-<div class="form-box">
-<h2>Contact Us</h2>
-<form>
-<input type="text" placeholder="Nama">
-<input type="email" placeholder="Email">
-<textarea rows="5" placeholder="Tulis pesan atau feedback..."></textarea>
-<button type="submit">Kirim</button>
-</form>
+<!-- ================= LOGIN ================= -->
+<div id="login" class="section">
+  <div class="form-box">
+    <h2>Login</h2>
+    <form>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+    <p class="switch">
+      Belum punya akun?
+      <span onclick="showSection('register')">Register di sini</span>
+    </p>
+  </div>
 </div>
+
+<!-- ================= REGISTER ================= -->
+<div id="register" class="section">
+  <div class="form-box">
+    <h2>Register</h2>
+    <form>
+      <input type="text" placeholder="Nama Lengkap" required>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit">Daftar</button>
+    </form>
+    <p class="switch">
+      Sudah punya akun?
+      <span onclick="showSection('login')">Login di sini</span>
+    </p>
+  </div>
+</div>
+
+<!-- ================= KONTAK ================= -->
+<div id="kontak" class="section">
+  <div class="form-box">
+    <h2>Contact Us</h2>
+    <form>
+      <input type="text" placeholder="Nama">
+      <input type="email" placeholder="Email">
+      <textarea rows="5" placeholder="Tulis pesan atau feedback..."></textarea>
+      <button type="submit">Kirim</button>
+    </form>
+  </div>
 </div>
 
 </main>
 
-<footer>© 2026 Perpustakaan Haya Farras</footer>
+<footer>
+  © 2026 Perpustakaan Haya Farras
+</footer>
 
 <script>
-function showPage(pageId){
-let pages=document.querySelectorAll('.page');
-pages.forEach(page=>page.classList.remove('active'));
-document.getElementById(pageId).classList.add('active');
+function showSection(id){
+  let sections = document.querySelectorAll('.section');
+  sections.forEach(sec => sec.classList.remove('active'));
+  document.getElementById(id).classList.add('active');
 }
 </script>
 
