--- a/index.html
+++ b/index.html
@@ -15,9 +15,51 @@
 }
 
 body {
+  min-height: 100vh;
   font-family: 'Poppins', sans-serif;
   background: linear-gradient(180deg, #dbeafe, #ffffff);
   color: #2c2c2c;
+}
+
+/* INTRO */
+.intro {
+  position: fixed;
+  inset: 0;
+  background: linear-gradient(180deg, #bfdbfe, #ffffff);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  opacity: 0;
+  animation: fadeIn 1.5s ease forwards, fadeOut 1.5s ease forwards;
+  animation-delay: 0s, 3s;
+}
+
+.intro h1 {
+  font-size: 48px;
+  color: #1e3a8a;
+  animation: slideUp 1.5s ease;
+}
+
+.intro h2 {
+  margin-top: 10px;
+  font-size: 20px;
+  color: #2563eb;
+  animation: slideUp 2s ease;
+}
+
+@keyframes fadeIn {
+  to { opacity: 1; }
+}
+
+@keyframes fadeOut {
+  to { opacity: 0; visibility: hidden; }
+}
+
+@keyframes slideUp {
+  from { transform: translateY(20px); opacity: 0; }
+  to { transform: translateY(0); opacity: 1; }
 }
 
 /* HEADER */
@@ -60,24 +102,9 @@ nav a:hover {
 /* MAIN */
 main {
   max-width: 900px;
-  margin: 80px auto 40px;
+  margin: 100px auto 40px;
   padding: 20px;
   text-align: center;
-}
-
-.section-divider {
-  width: 60%;
-  height: 2px;
-  margin: 40px auto;
-  background: linear-gradient(to right, transparent, #93c5fd, transparent);
-}
-
-.profile-img {
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
-  object-fit: cover;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
 }
 
 /* SECTION CONTROL */
@@ -89,6 +116,60 @@ main {
   display: block;
 }
 
+.section-divider {
+  width: 60%;
+  height: 2px;
+  margin: 50px auto;
+  background: linear-gradient(to right, transparent, #93c5fd, transparent);
+  border-radius: 2px;
+}
+
+.profile-img {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+
+/* ABOUT LINKS */
+.about-links {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.about-links a {
+  text-decoration: none;
+  background-color: #93c5fd;
+  color: #1e3a8a;
+  padding: 8px 18px;
+  border-radius: 20px;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+.about-links a:hover {
+  background-color: #1e3a8a;
+  color: white;
+}
+
+/* VIDEO */
+.video-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+iframe {
+  width: 100%;
+  max-width: 560px;
+  height: 315px;
+  border-radius: 12px;
+}
+
 /* FORM STYLE */
 .form-box {
   background: white;
@@ -97,7 +178,6 @@ main {
   box-shadow: 0 5px 20px rgba(0,0,0,0.1);
   max-width: 400px;
   margin: 40px auto;
-  text-align: center;
 }
 
 .form-box input,
@@ -141,6 +221,12 @@ footer {
 
 <body>
 
+<!-- INTRO -->
+<div class="intro">
+  <h1>Selamat Datang ✨</h1>
+  <h2>Perpustakaan Haya Farras</h2>
+</div>
+
 <header>
   <div class="logo">
     <img src="logo.png" alt="Logo">
@@ -172,12 +258,27 @@ footer {
   <div class="section-divider"></div>
 
   <h2>Tentang Aku</h2>
-  <img src="foto.jpg" alt="Foto Haya Farras" class="profile-img">
+  <img src="fotoku.jpg" alt="Foto Haya Farras" class="profile-img">
   <p>
     Halo, aku Haya Farras. Website ini merupakan bagian dari tugas akademik
     sekaligus wadah untuk menampilkan minat dan ketertarikanku dalam bidang
     literasi dan pengelolaan perpustakaan.
   </p>
+
+  <div class="about-links">
+    <a href="https://instagram.com/thirahay" target="_blank">Instagram</a>
+    <a href="https://drive.google.com/" target="_blank">Curriculum Vitae</a>
+  </div>
+
+  <div class="section-divider"></div>
+
+  <h2>Video Dokumentasi Pengabdian kepada Masyarakat</h2>
+  <div class="video-container">
+    <iframe 
+      src="https://www.youtube.com/embed/4w13jP-cshM"
+      allowfullscreen>
+    </iframe>
+  </div>
 
 </div>
 
@@ -196,10 +297,6 @@ footer {
       <input type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <p class="switch">
-      Belum punya akun?
-      <span onclick="showSection('register')">Register di sini</span>
-    </p>
   </div>
 </div>
 
@@ -213,10 +310,6 @@ footer {
       <input type="password" placeholder="Password" required>
       <button type="submit">Daftar</button>
     </form>
-    <p class="switch">
-      Sudah punya akun?
-      <span onclick="showSection('login')">Login di sini</span>
-    </p>
   </div>
 </div>
 
