--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ footer {
   <div class="section-divider"></div>
 
   <h2>Tentang Aku</h2>
-  <img src="fotoku.jpg" alt="Foto Haya Farras" class="profile-img">
+  <img src="foto.jpg" alt="Foto Haya Farras" class="profile-img">
   <p>
     Halo, aku Haya Farras. Website ini merupakan bagian dari tugas akademik
     sekaligus wadah untuk menampilkan minat dan ketertarikanku dalam bidang
@@ -267,7 +267,7 @@ footer {
 
   <div class="about-links">
     <a href="https://instagram.com/thirahay" target="_blank">Instagram</a>
-    <a href="https://drive.google.com/" target="_blank">Curriculum Vitae</a>
+    <a href="https://drive.google.com/file/d/1r1lnVzjixANkzNoi87yE_cddTXBTAZDV/view?usp=drive_link" target="_blank">Curriculum Vitae</a>
   </div>
 
   <div class="section-divider"></div>
